--- a/app/views/markets/_account_summary.html.erb
+++ b/app/views/markets/_account_summary.html.erb
@@ -13,7 +13,7 @@
           <% ccy = account.fetch(:currency) %>
           <tr class="<%= ccy.fetch(:code) %> <%= [market.fetch(:ask_unit), market.fetch(:bid_unit)].include?(ccy[:code]) ? '' : 'hide' %>">
             <td class="account-symbol col-xs-6 text-center">
-              <div class="currency-logo" style="background-image: url('<%= ccy.fetch(:icon_url) %>');"></div>
+              <div class="currency-logo" style="background-image: url('<%= ENV['FRONTEND_ROOT_URL'] %>/<%= ccy.fetch(:icon_url) %>');"></div>
               <div><%= ccy[:code].upcase %></div>
             </td>
             <td class="account-balance col-xs-18 text-right">
